--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,11 +7,9 @@ management:
         include: "*"
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: password
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
   jpa:
-    properties:
-      hibernate:
-        default_schema: console
+    database-platform: org.hibernate.dialect.H2Dialect
