--- a/pom.xml
+++ b/pom.xml
@@ -115,10 +115,10 @@
         </dependency>
 
         <!-- Spring security -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
 
 
         <!-- JUnit -->
