--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         </dependency>
 
         <!-- Spring security -->
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>-->
